libmeegotouch (0.20.54~1) unstable; urgency=low

  * Unreleased
  * Fixes: NB#202957 - Application extensions are not loaded if the application extension interface specific directory is missing

 -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Thu, 11 Nov 2010 14:53:50 +0200

libmeegotouch (0.20.53-1) unstable; urgency=low

  * Fixes: NB#195013 -  mstartup crash.
  * Fixes: NB#202338 - Application requires signal to indicate when minimizing starts
  * Fixes: NB#182815 -  Pannable widget is not transparent wrt. passing focus to child widgets
  * Fixes: NB#203431 - Floating list index is crashing when group count is less than floating index count style property.
  * Fixes: NB#190835 - MImageWidget is displayed black when image size is bigger than maximum supported size
  * Fixes: NB#201968 - MContainer should either take ownership of the centralWidget or not.

 -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Thu, 11 Nov 2010 14:53:50 +0200

libmeegotouch (0.20.52-1) unstable; urgency=low

  * New version
  * Fixes: NB#202548 - MToolbar is not hidden in portrait mode in blanco when action is hidden
  * Fixes: NB#201073 - styling documentation does not explain how to create css files for external libraries
  * Fixes: NB#198866 -  wrt booster keeps OpenGl context
  * Fixes: NB#200879 - Accounts-UI crashes after closing
  * Fixes: NB#200522 - The recents view does not show application toolbars
  * Fixes: NB#185520 - MAdvancedListItem documentation is very poor
  * Fixes: NB#181399 - Incremental layouting during startup
  * Fixes: NB#201180 - Portrait mode: Toolbar buttons move to middle of screen after playback completion
  * Fixes: NB#195013 -  mstartup crash.
  * Fixes: NB#200716 - Crash when assigning custom font size by CSS
  * Fixes: NB#159706 - Blocking of background application paints not working
  * Fixes: NB#178847 - Flicker when switching between tabs in the Music app
  * Fixes: NB#200810 - There's a 'back' arrow in the Phone toolbar.